--- a/application.properties
+++ b/application.properties
@@ -2,9 +2,9 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.service-url=http://localhost:8761/
 
-microservice.payment-service.edipoints.endpoint.url:http://PAYMENT-SERVICE/payment/doPayment
+microservice.payment-service.edipoints.endpoint.url=http://PAYMENT-SERVICE/payment/doPayment
 
-microservice.payment-service.edipoints.endpoint.url:http://ORDER-SERVICE/order/bookOrder
+microservice.payment-service.edipoints.endpoint.url=http://ORDER-SERVICE/order/bookOrder
 
 
 
