--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.service-url=http://localhost:8761/
+eureka.instance.hostname=localhost
 
 microservice.payment-service.edipoints.endpoint.url=http://PAYMENT-SERVICE/payment/doPayment
 
