--- a/application.properties
+++ b/application.properties
@@ -3,9 +3,9 @@ eureka.client.register-with-eureka=true
 eureka.service-url=http://localhost:8761/
 eureka.instance.hostname=localhost
 
-microservice.payment-service.edipoints.endpoint.url=http://PAYMENT-SERVICE/payment/doPayment
+microservice.payment-service.endpoints.endpoint.url=http://PAYMENT-SERVICE/payment/doPayment
 
-microservice.payment-service.edipoints.endpoint.url=http://ORDER-SERVICE/order/bookOrder
+microservice.order-service.endpoints.endpoint.url=http://ORDER-SERVICE/order/bookOrder
 
 
 
