--- a/application.properties
+++ b/application.properties
@@ -7,6 +7,8 @@ microservice.payment-service.endpoints.endpoint.url=http://PAYMENT-SERVICE/payme
 
 microservice.order-service.endpoints.endpoint.url=http://ORDER-SERVICE/order/bookOrder
 
+greeting.message=Hellothere
+
 
 
 
